logs/conftool.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/conftool'...
Listing './lib/python3.5/site-packages/conftool/cli'...
Compiling './lib/python3.5/site-packages/conftool/cli/tool.py'...
***   File "./lib/python3.5/site-packages/conftool/cli/tool.py", line 76
    print yaml.dump(dict(all_objects), default_flow_style=False)
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/conftool/drivers'...
Listing './lib/python3.5/site-packages/conftool/tests'...
Listing './lib/python3.5/site-packages/conftool/tests/integration'...
Listing './lib/python3.5/site-packages/conftool/tests/unit'...
Listing './lib/python3.5/site-packages/conftool-0.4.1.egg-info'...
Listing './lib/python3.5/site-packages/dns'...
Listing './lib/python3.5/site-packages/dns/rdtypes'...
Listing './lib/python3.5/site-packages/dns/rdtypes/ANY'...
Listing './lib/python3.5/site-packages/dns/rdtypes/IN'...
Listing './lib/python3.5/site-packages/dnspython-1.15.0.dist-info'...
Listing './lib/python3.5/site-packages/etcd'...
Listing './lib/python3.5/site-packages/etcd/tests'...
Listing './lib/python3.5/site-packages/etcd/tests/integration'...
Listing './lib/python3.5/site-packages/etcd/tests/unit'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_etcd-0.4.5.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
